--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,11 @@
           />
 
     </RelativeLayout>
-
+    <com.uguke.code.editor.widget.EditorView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        />
     <WebView
         android:id="@+id/wv_container"
         android:layout_width="match_parent"
@@ -139,8 +143,7 @@
     <FrameLayout
         android:id="@+id/fl_action"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        />
+        android:layout_height="0dp" />
 
   </LinearLayout>
 </FrameLayout>
