--- a/app/src/main/res/layout/fragment_font_setting.xml
+++ b/app/src/main/res/layout/fragment_font_setting.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/font_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:overScrollMode="never">
 
-  <android.support.v7.widget.RecyclerView
-      android:id="@+id/rv_container"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      />
-
-</LinearLayout>
+</android.support.v7.widget.RecyclerView>
