--- a/app/src/main/res/layout/toolbar_common.xml
+++ b/app/src/main/res/layout/toolbar_common.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.AppBarLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/actionBarSize"
-    android:background="@color/colorPrimary"
-    app:elevation="0dp">
+<!--<android.support.design.widget.AppBarLayout-->
+    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="@dimen/actionBarSize"-->
+    <!--android:background="@color/colorPrimary"-->
+    <!--app:elevation="0dp">-->
 
     <android.support.v7.widget.Toolbar
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -13,6 +13,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/actionBarSize"
+        android:background="@color/colorAccent"
         app:contentInsetStart="@dimen/paddingContent"
         app:contentInsetEnd="@dimen/paddingContent"
         app:popupTheme="@style/ToolbarPopupTheme"
@@ -20,4 +21,4 @@
         app:titleTextAppearance="@style/ToolbarCommon">
     </android.support.v7.widget.Toolbar>
 
-</android.support.design.widget.AppBarLayout>
+<!--</android.support.design.widget.AppBarLayout>-->
