--- a/app/src/main/res/layout/editor_acitvity.xml
+++ b/app/src/main/res/layout/editor_acitvity.xml
@@ -16,8 +16,7 @@
             android:id="@+id/editor_container"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@color/colorPrimary"/>
+            android:layout_weight="1"/>
 
         <LinearLayout
             android:layout_width="match_parent"
