--- a/app/src/main/res/layout/popupwindow.xml
+++ b/app/src/main/res/layout/popupwindow.xml
@@ -2,6 +2,5 @@
     android:id="@+id/popuplayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent"
-    android:orientation="vertical"
-    />
+    android:background="@color/colorWhite"
+    android:orientation="vertical" />
